<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:title="Masuk Melalui E-mail"
            android:fitsSystemWindows="true" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            style="@style/LoginTextInputLayoutStyle"
            app:hintTextAppearance="@style/HintText"
            app:hintEnabled="true"
            app:errorEnabled="true" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailLogin"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            app:passwordToggleEnabled="true"
            android:id="@+id/passwordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            style="@style/LoginTextInputLayoutStyle"
            app:hintTextAppearance="@style/HintText"
            app:hintEnabled="true"
            app:errorEnabled="true" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/emailLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordLogin"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_remove_red_eye_black_24dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout" android:id="@+id/relativeLayout">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_login"
                android:layout_alignParentLeft="true"
                android:textSize="12sp"
                android:textColor="@color/black_text"/>
        <TextView
                android:id="@+id/button_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/textbutton_forget_password"
                android:textAllCaps="true"
                android:layout_centerVertical="true"
                android:textColor="@color/link_textview"
                android:clickable="true"/>
    </RelativeLayout>

    <Button
            android:elevation="4dp"
            android:id="@+id/buttonLogin"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_login"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"/>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_gravity="center|bottom"
            android:visibility="gone" android:layout_marginEnd="411dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="411dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="200dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>