<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OnboardingActivity"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

    <TextView
            android:id="@+id/buttonSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="lewati"
            android:textAllCaps="true"
            android:textColor="@color/grey_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clickable="true"/>

    <androidx.viewpager.widget.ViewPager
            android:layout_width="0dp"
            android:layout_height="262dp" android:id="@+id/viewPager"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSkip"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

    </androidx.viewpager.widget.ViewPager>

    <Button
            android:id="@+id/buttonFacebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/button_facebook"
            android:elevation="4dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/viewPager"/>

    <Button
            android:elevation="4dp"
            android:id="@+id/buttonGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/button_google"
            android:text="@string/google"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textAllCaps="false"
            android:textColor="@color/black_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFacebook"/>

    <Button
            android:elevation="4dp"
            android:id="@+id/buttonEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorPrimary"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/email"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/buttonGoogle"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="24dp"
            android:text="Sudah punya akun?"
            android:textColor="@color/black_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonEmail"/>

    <TextView
            android:id="@+id/buttonSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginTop="24dp"
            android:text="Masuk Sekarang"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/buttonEmail" app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>